# Serverless-Rag

./: .env  .env.example  .gitignore  main.py  pyproject.toml  run-backend.ps1  run-backend.sh  run-notebooks.ps1  run-notebooks.sh
backend/: main.py  run_dev.ps1  run_prod.ps1
backend/api/: __init__.py
backend/api/v1/: __init__.py  routes.py
backend/api/v1/endpoints/: __init__.py  chat.py  files.py
backend/core/: config.py
backend/db/: __init__.py  base.py  session.py
backend/models/: __init__.py  file.py
backend/schemas/: __init__.py  chat.py  file.py
backend/services/: __init__.py  chat_service.py  file_service.py  gemini_service.py  service_base.py
backend/tests/: TEST_RESULTS.md  __init__.py  conftest.py  test_chat_service.py  test_db_base.py  test_db_session.py  test_file_service.py  test_models_file.py  test_service_base.py
frontend/: README.md  index.html  pnpm-lock.yaml  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: BackendStatus.tsx  FileGrid.tsx  Header.tsx  Pagination.tsx  SearchBar.tsx  ThemeToggle.tsx  UploadDialog.tsx
frontend/src/lib/: api.ts  formatters.ts
frontend/src/pages/: Chat.tsx  Index.tsx
notebooks/: 00_setup.ipynb  amir.txt  sample.txt
