[project]
name = "servless-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.1",
    "firebase-admin>=7.1.0",
    "google-cloud-firestore>=2.21.0",
    "google-cloud-storage>=3.5.0",
    "google-genai>=1.49.0",
    "httpx>=0.28.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.38.0",
]

[project.optional-dependencies]
notebooks = [
    "ipykernel>=7.1.0",
    "jupyterlab>=4.4.10",
    "jupytext>=1.18.1",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "rich>=14.2.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.4",
    "types-pyjwt>=1.7.1",
]
